# aardvark-rs

./: Cargo.toml
aardvark-ffi/: Cargo.toml  build.rs  wrapper.h
aardvark-ffi/examples/: aa_detect.rs  aai2c_slave.rs  find_devices.rs  lights.rs  unused_devices.rs
aardvark-ffi/include/: aardvark.h
aardvark-ffi/src/: bindings_linux_x86_64.rs  i2c.rs  lib.rs  plugin.rs
examples/: i2c_device_lights.rs
src/: error.rs  i2c.rs  lib.rs
